--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-left: 30%;
 }
 .post-image {
     display: block;
