--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ h1 {
     text-align: left;
 }
 body {
-    background-color: black;
+    background-color: wheat;
 }
 #fa-solid fa-paper-plane {
     text-align: left;
