--- a/style.css
+++ b/style.css
@@ -1,6 +1,34 @@
-.breadcrumb{
-    margin: 0 auto;
+.breadcrumb {
+  margin: 0 auto;
 }
-.row{
-    padding-left: 45px;
+
+.row {
+  padding-left: 45px;
+}
+
+#postsContainer img {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  transition: all 0.3s ease;
+}
+
+/* Galería (por defecto) */
+.gallery-view .row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.gallery-view .col-4 {
+  width: 33.33%;
+}
+
+/* Vista Scroll */
+.scroll-view .row {
+  display: block;
+}
+
+.scroll-view .col-4 {
+  width: 50%;
+  margin: 0 auto;
 }
